@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-01T16:10:41Z",
-  "count" : 9,
-  "count_minmax" : [ 7, 9 ],
-  "count_decinc" : [ -0, +9 ],
-  "uniques" : 7,
-  "uniques_minmax" : [ 6, 7 ],
-  "uniques_decinc" : [ -0, +7 ]
+  "timestamp" : "2023-10-02T00:43:34Z",
+  "count" : 16,
+  "count_minmax" : [ 7, 16 ],
+  "count_decinc" : [ -0, +16 ],
+  "uniques" : 12,
+  "uniques_minmax" : [ 6, 12 ],
+  "uniques_decinc" : [ -0, +12 ]
 }
