@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-01T16:10:41Z",
-  "count_outdated" : 5140,
-  "uniques_outdated" : 1589,
-  "count" : 5410,
-  "uniques" : 1726,
+  "timestamp" : "2023-10-02T00:43:34Z",
+  "count_outdated" : 5153,
+  "uniques_outdated" : 1596,
+  "count" : 5417,
+  "uniques" : 1731,
   "clones" : [
-    {
-      "timestamp": "2023-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 13 ],
-      "count_decinc": [ 12, 13 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 7 ],
-      "uniques_decinc": [ 6, 7 ]
-    },
     {
       "timestamp": "2023-09-18T00:00:00Z",
       "count": 3,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2023-10-01T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 7, 9 ],
-      "count_decinc": [ 0, 9 ],
-      "uniques": 7,
-      "uniques_minmax": [ 6, 7 ],
-      "uniques_decinc": [ 0, 7 ]
+      "count": 16,
+      "count_minmax": [ 7, 16 ],
+      "count_decinc": [ 0, 16 ],
+      "uniques": 12,
+      "uniques_minmax": [ 6, 12 ],
+      "uniques_decinc": [ 0, 12 ]
     }
   ]
 }
