@@ -1,12 +1,7 @@
 {
-  "count": 258,
-  "uniques": 89,
+  "count": 264,
+  "uniques": 92,
   "clones": [
-    {
-      "timestamp": "2023-09-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-18T00:00:00Z",
       "count": 3,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2023-10-01T00:00:00Z",
-      "count": 9,
-      "uniques": 7
+      "count": 16,
+      "uniques": 12
     }
   ]
 }
